# osim

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  NOTICE.txt  README.md
.github/workflows/: continuous-integration-workflow.yml
apps/: CMakeLists.txt  example_app.cpp
docs/: CMakeLists.txt
docs/source/: conf.py  index.rst
requirements/: doc_requirements.txt
scripts/: build_windows.bat
src/: CMakeLists.txt  example_app.cpp
src/osim/: CMakeLists.txt  osim.cpp  osim.h
src/osim/ThirdPartyPlugins/: RegisterTypes_osimPlugin.cpp
src/osim/ThirdPartyPlugins/opensim-jam-org/jam-plugin/: Smith2018ContactMesh.h
src/pyosim/: CMakeLists.txt  pyosim.cpp
tests/: CMakeLists.txt
tests/testpyosim/: CMakeLists.txt  test_pyosim.py  testpyosim.py
tests/testpyosim/cmake/: FindPytest.cmake  PytestAddTests.cmake
